<resources>
    <string name="app_name">RiddleQuizApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="phone_number">Phone number:</string>
    <string name="take_picture">Take a picture</string>
    <string name="finish">Finish</string>
    <string name="title_activity_main_screen">Riddle Quiz</string>
    <string name="show_map">Show map</string>
    <string name="highscore">HighScore</string>
    <string name="myplaces">My Places</string>
    <string name="myfriends">My Friends</string>
    <string name="about">About</string>
    <string name="scan">Scan</string>
    <string name="title_activity_friends">My Friends</string>
    <string name="title_activity_mapa">Map</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_search">Search</string>
    <string name="credentials">Enter credentials</string>
    <string name="fb_signup">Sign up with Facebook</string>
    <string name="facebook_app_id">1534172610208435</string>
    <string name="logout">Logout</string>
    <string name="cur_loc">Current location</string>
    <string name="descrPtr">
        Pavle Vidanovic was born in 1992, Pirot, Serbia. He graduated from Faculty of Electronic Engineering Nis in July 2015 and holds bachelor degree in Computer Science of Electrical Engineering. He is currently graduate student at Politencnico to Milano.<br/>
    </string>
    <string name="descrPtr1">
        Nenad Petrovic was born in 1992, Pirot, Serbia. He graduated from Faculty of Electronic Engineering Nis in July 2015 and holds bachelor degree in Computer Science of Electrical Engineering. He is currently graduate student at Politencnico to Milano.
    </string>
    <string name="myfiends">My Friends</string>
    <string name="radious">Change Radious</string>
    <string name="model3D">3D Model</string>

    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>
